Feature/refresh by org (#914)
* Endpoint for container refresh by organization
* Endpoint for refresh workflow by organization
* Return no content instead of OK for delete token
* Returning all the current tools
* Remove unused function
* Add auth to endpoints
* Change the description of endpoint
* Test for endpoint